Updated deps Updated CmsEdit.css - fixing "smaller screens" and ContentArea overlapping the ttile and description fields - Chevron arrow used in 'Message' instead of arrow

--- a/source/SystemLibrary.Common.Episerver/Cms/CmsEdit/CmsEdit.css
+++ b/source/SystemLibrary.Common.Episerver/Cms/CmsEdit/CmsEdit.css
@@ -4,26 +4,34 @@
 .Sleek div.epi-containerLayout.dijitLayoutContainer.dijitContainer ul > li.epi-form-container__section__row.epi-form-container__section__row--field > label[title]:after {
     display: block;
     content: " " attr(title);
-    font-size: 13.5px;
+    font-size: 13px;
     font-style: italic;
     position: relative;
     background-color: #efefef;
     border-radius: 3px;
-    padding-left: 3px;
-    padding-right: 3px;
+    padding-left: 4px;
+    padding-right: 4px;
     color: #626262;
     margin-top: 3px;
     position: relative;
-    width: 228px;
+    width: 226px;
+    max-width: 226px;
     line-height: 1.31;
+}
+
+@media screen and (max-width: 1200px) {
+    .Sleek div.epi-cardContainer.dijitContainer.dijitLayoutContainer .dijitContainer > .epi-form-container div.dijitTabPaneWrapper ul.epi-form-container__section.dijitLayoutContainer.dijitContainer > li.epi-form-container__section__row > label[title]:after,
+    .Sleek div.epi-containerLayout.dijitLayoutContainer.dijitContainer ul > li.epi-form-container__section__row.epi-form-container__section__row--field > label[title]:after {
+        font-size: 12px;
+        width: 100%;
+    }
 }
 
 /* Display 'descriptions' for each property in 'PropertyList Dialog View' */
 /* The 'descriptions' are not currently part of the 'PropertyList Dialog View' */
 
 /* Hide 'Descriptions' in the last tab, 'SETTINGS' which is Episerver "only" properties */
-.Sleek div.epi-cardContainer.dijitContainer.dijitLayoutContainer .dijitContainer > .epi-form-container div.dijitTabPaneWrapper ul.dijitLayoutContainer.dijitContainer.epi-form-container__section:last-child > li.epi-form-container__section__row > label[title]:after
-{
+.Sleek div.epi-cardContainer.dijitContainer.dijitLayoutContainer .dijitContainer > .epi-form-container div.dijitTabPaneWrapper ul.dijitLayoutContainer.dijitContainer.epi-form-container__section:last-child > li.epi-form-container__section__row > label[title]:after {
     content: none;
 }
 
@@ -41,8 +49,15 @@
 .Sleek div.epi-cardContainer.dijitContainer.dijitLayoutContainer .dijitContainer > .epi-form-container div.dijitTabPaneWrapper ul.epi-form-container__section.dijitLayoutContainer.dijitContainer > li.epi-form-container__section__row > label,
 /* Set label width on all properties in 'On Create New Block Properties View' */
 .Sleek div.epi-containerLayout.dijitLayoutContainer.dijitContainer ul > li.epi-form-container__section__row.epi-form-container__section__row--field > label {
-    width: 236px;
+    width: 100%;
+    max-width: 236px;
     /* box-sizing: unset; */
+}
+
+@media screen and (max-width: 1200px) {
+    .Sleek div.epi-containerLayout.dijitLayoutContainer.dijitContainer ul > li.epi-form-container__section__row.epi-form-container__section__row--field > label {
+        width: auto;
+    }
 }
 
 
@@ -70,7 +85,7 @@
     margin-left: 0px;
     overflow: hidden;
 }
-    
+
 .Sleek div.epi-cardContainer.dijitContainer.dijitLayoutContainer .dijitContainer > .epi-form-container div.dijitTabPaneWrapper .dijit.dijitReset.dijitInline.dijitLeft.dijitTextBox.dijitValidationTextBox {
     min-width: 250px !important;
 }
@@ -95,6 +110,18 @@
     float: left !important;
     cursor: pointer;
 }
+
+/* Wide 'Content Area' selector */
+.Sleek li.epi-form-container__section__row--field div.epi-content-area-editor--wide.epi-content-area-editor {
+    max-width: 608px;
+    margin-left: 8px;
+}
+
+.Sleek li.epi-form-container__section__row--field div.epi-content-area-header-block {
+    max-width: 608px;
+    margin-left: 8px;
+}
+
 
 /* CheckBoxes 'On Create Page' and 'On Create Block' required properties view */
 div.epi-createContent div.dijitContainer.epi-newContentContainer ul li.epi-form-container__section__row.epi-form-container__section__row--field.epi-form-container__section__row--checkbox {
@@ -176,3 +203,45 @@ div.epi-createContent div.dijitContainer.epi-newContentContainer ul li.epi-form-
     border-color: ActiveProjectBarBackgroundColorBorder !important;
 }
 
+/* Revert Epi 12.10 UI changes */
+
+.Sleek div.dijitTabPaneWrapper > ul.epi-form-container__section.dijitLayoutContainer.dijitContainer.dijitTabPane.dijitVisible > li.epi-form-container__section__row {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+}
+
+.Sleek div.dijitTabPaneWrapper > ul.epi-form-container__section.dijitContainer.dijitTabPane > li.epi-form-container__section__row > .epi-form-container__section__label-container {
+    max-width: 200px !important;
+    min-width: 200px !important;
+    align-items: start;
+    padding: 8px !important;
+}
+
+.Sleek div.dijitTabPaneWrapper > ul.epi-form-container__section.dijitLayoutContainer.dijitContainer.dijitTabPane.dijitVisible > li.epi-form-container__section__row > * {
+    height: unset;
+    padding: 8px !important;
+}
+
+.Sleek .epi-form-container__section__row.epi-form-container__section__row--field {
+    border-bottom: 1px solid #efefef;
+}
+
+
+.Sleek div.dijitTabPaneWrapper > ul.epi-form-container__section.dijitContainer.dijitTabPane > li.epi-form-container__section__row.epi-form-container__section__row--field.epi-form-container__section__row--checkbox {
+    left: 0 !important;
+    padding: 0 !important;
+}
+
+.Sleek .epi-form-container__section__row.epi-form-container__section__row--field.epi-form-container__section__row--checkbox > .epi-form-container__section__label-container {
+    left: 0 !important;
+    display: flex;
+    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.Sleek .epi-form-container__section__row.epi-form-container__section__row--field.epi-form-container__section__row--checkbox > .epi-form-container__section__label-container > div.dijit.dijitReset.dijitInline {
+    position: absolute;
+    left: 222px;
+}
