--- a/source/SystemLibrary.Common.Episerver/Cms/Properties/Message/Message.css
+++ b/source/SystemLibrary.Common.Episerver/Cms/Properties/Message/Message.css
@@ -9,6 +9,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    padding: 4px;
 }
 
 .Sleek .systemLibraryCommonEpiserverMessage .systemLibraryCommonEpiserverMessageCollapsed p,
